# OpenRAND

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  annotated.html  base__state_8h_source.html  base__state_8hpp_source.html  classBaseRNG-members.html  classBaseRNG.html  classPhillox-members.html  classPhillox.html  classSquares-members.html  classSquares.html  classThreefry-members.html  classThreefry.html  classTyche-members.html  classTyche.html  classes.html  classopenrand_1_1BaseRNG-members.html  classopenrand_1_1BaseRNG.html  classopenrand_1_1Phillox-members.html  classopenrand_1_1Phillox.html  classopenrand_1_1Philox-members.html  classopenrand_1_1Philox.html  classopenrand_1_1Squares-members.html  classopenrand_1_1Squares.html  classopenrand_1_1Threefry-members.html  classopenrand_1_1Threefry.html  classopenrand_1_1Tyche-members.html  classopenrand_1_1Tyche.html  dir_9822bdd7ed57d969417fbf38afdaed46.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  md__home_runner_work_OpenRAND_OpenRAND_examples_README.html  (+25 more)
.github/workflows/: gh-pages-deploy.yml  run-tests.yml  stat-tests.yml
benchmarks/: CMakeLists.txt  raw_speed.cpp  raw_speed_cpu.cpp  raw_speed_cuda.cu
docs/: Doxyfile  quickstart.md  statistical_results.md
docs/sphinx/: conf.py  index.rst
examples/: CMakeLists.txt  README.md  basic_usage.cpp  pi_cuda.cu  pi_kokkos.cpp  pi_openmp.cpp  state_forwarding.cpp
include/: base_state.hpp  phillox.h  squares.h  threefry.h  tyche.h  util.h
include/openrand/: base_state.h  phillox.h  philox.h  squares.h  threefry.h  tyche.h  util.h
results/: practrand_philox.txt  practrand_squares.txt  practrand_threefry.txt  practrand_tyche.txt  practrandm_philox.txt  practrandm_squares.txt  practrandm_threefry.txt  practrandm_tyche.txt  testu01m_philox.txt  testu01m_squares.txt  testu01m_threefry.txt  testu01m_tyche.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js
tests/: CMakeLists.txt  README.txt  pract_rand.cpp  pract_rand_multistream.cpp  run_stat_tests.py  test_base.cpp  test_normal.cpp  test_uniform.cpp  testu01-multistream.cpp  testu01.cpp
